# vibromaf

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc-nb.ini  .typos.toml  404.html  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  search.html  setup.py
.github/workflows/: ci.yml  codeql-analysis.yml  docs.yml  packaging.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
LICENSE/: index.html
docs/: generate_ref_pages.py  get-started.md  installation.md  reference.md
docs/metrics/: snr.md  spqi.md  stsim.md  vibromaf.md
examples/: evaluate_wav.py  white_noise.py
get-started/: index.html
installation/: index.html
metrics/snr/: index.html
metrics/spqi/: index.html
metrics/stsim/: index.html
metrics/vibromaf/: index.html
model/: vibromaf-v1.pickle
notebook/: hmaf-training.ipynb  metric-plot.ipynb
reference/: index.html
reference/SUMMARY/: index.html
reference/vibromaf/: index.html
reference/vibromaf/config/: index.html
reference/vibromaf/metrics/: index.html
reference/vibromaf/metrics/snr/: index.html
reference/vibromaf/metrics/spqi/: index.html
reference/vibromaf/metrics/stsim/: index.html
reference/vibromaf/metrics/vibromaf/: index.html
reference/vibromaf/signal/: index.html
reference/vibromaf/signal/perception/: index.html
reference/vibromaf/signal/spectrum/: index.html
reference/vibromaf/signal/transform/: index.html
reference/vibromaf/util/: index.html
reference/vibromaf/util/common/: index.html
reference/vibromaf/util/matlab/: index.html
reference/vibromaf/util/model/: index.html
search/: search_index.json
test/metrics/: test_snr.py  test_spqi.py  test_stsim.py  test_vibromaf.py
test/signal/: test_perception.py  test_spectrum.py  test_transform.py
test/util/: test_common.py  test_matlab.py  test_model.py
tests/metrics/: test_snr.py
tests/signal/: test_spectrum.py
tests/util/: test_common.py  test_matlab.py
tests/util/res/: test.mat
vibromaf/: config.py
vibromaf/metrics/: snr.py  spqi.py  stsim.py  vibromaf.py
vibromaf/signal/: perception.py  spectrum.py  transform.py
vibromaf/util/: common.py  matlab.py  model.py
